--- a/ITIS3135/index.html
+++ b/ITIS3135/index.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <Title>ITIS 3135 Home</Title>
     <body>
-    <h1> Hello ITIS 3135.</h1>
+    <h1> I am Adrian Khlim and this is the root of my ITIS 3135 website.</h1>
     </body>
 </head>
