--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -7,5 +7,5 @@
 </head>
 
 <body>
-    <h1> I am Adrian Khlim and this is the root of my ITIS 3135 website. </h1>
+    <h1> I am Adrian Khlim and this is my ITIS3135 First Course Page . </h1>
     </body>
