--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,4 +9,5 @@
 
 <body>
     <h1> I am Adrian Khlim and this is my ITIS3135 First Course Page . </h1>
-    </body>
+</body>
+</html>
