Updated CSS and content

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -3,18 +3,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <Title>Hobby</Title>
+    <link rel="stylesheet" href="styles/hobby.css">
     <body>
         <header>
             <h1>Adrian's Favorite Competitive Games</h1>
             <nav>
-
+                <span><a id="nav" href="#home">Home</a></span>
+                <span><a id="nav" href="#about_me">About Me</a></span>
+                <span><a id="nav" href="#best_times">Best Times</a></span>
+                <span><a id="nav" href="#where">Where to Play</a></span>
+                <span><a id="nav" href="#why">Why Climb</a></span>
+                <span><a id="nav" href="#how_to_climb">How to Climb</a></span>
+                <span><a id="nav" href="#ai_prompt">AI Prompts</a></span>
             </nav>
         </header>
 
         <main>
             
             <section id="home"> 
-                <h2>Welcome to my Hobby Page!</h2>
+                <h2 id="section_title">Welcome to my Hobby Page!</h2>
                 <p>My biggest hobby is definitely playing video games. This includes arcade rhythm games, mobile games, role playing games, FPS games, RTS, but the one genre I cannot escape is <b>competitive video games</b>. 
                 <br>
                     I have reached the top .001% in Overwatch and Teamfight Tactics, and I am currently only Celestial II in Marvel Rivals (top ~0.50%) since I have not played ranked much.
@@ -37,14 +44,14 @@
             </section>
 
             <section id="about_me">
-                <h2>About Me</h2>
+                <h2 id="section_title">About Me</h2>
                 <p>
                     I am currently the <b>Lead Teaching Assistant</b> for all of ITSC 2214, Data Structures and Algorithms. I am currently doing undergraduate research with Dr. Yonghong Yan and I am developing a Treatment Planning System website to perform 
                     radiation 
                     <br>
                     simulations, beam calculations, plan generations, plan optimizations, and dose calculations for cancer research and radiation therapy.
                 </p>
-                <p id="twitch">I plan to start streaming on Twitch again, and go by <a href="https://www.twitch.tv/heybedhead">heybedhead</a>.
+                <p id="twitch">I plan to start streaming on Twitch again, and go by <a href="https://www.twitch.tv/heybedhead"><b>heybedhead</b></a>.
                 </p>
 
                 <p>
@@ -57,41 +64,57 @@
                     I developed my critical thinking skills so much, and also made amazing life long friends, and I have played with some of my favorite streamers and pros. I don't even regret failing school, because I would never have gotten this far.
 
                 </p>
+                <figure>
                 <img src="images/bp4k1.gif" alt="Four kills in a row as Marvel Rival's Black Panther.">
                     <figcaption> <i>Simple 4k as Black Panther, one of my favorite characters to play</i></figcaption>
+                </figure>
             </section>
 
             <section id="best_times">
-                <h2>Best Times</h2>
+                <h2 id="section_title">Best Times</h2>
                 <figure>
                     <img src="images/top500.jpg" alt="Image of me hitting rank 152 on Overwatch.">
                     <figcaption> <i>When I hit rank 152 for the first time (peaked at 125) on Overwatch.</i></figcaption>
                 </figure>
+                <figure>
                 <img src="images/gmtft.png" alt="Image of me hitting rank Grandmaster on Teamfight Tactics (Top 750).">
                     <figcaption> <i>When I hit Grandmaster (top 750) on Teamfight Tactics.</i></figcaption>
                 </figure>
             </section>
 
             <section id="where">
-                <h2>Where Can You Play and Download?</h2>
+                <h2 id="section_title">Where Can You Play and Download?</h2>
             </section>
 
             <section id="why">
                 <h2>Why You Should Climb</h2>
+                <figure>
                 <img src="images/cel2_2.png" alt="Image of when I first hit Celestial II on Marvel Rivals.">
                     <figcaption> <i>When I first hit Celestial II on Marvel Rivals.</i></figcaption>
                 </figure>
             </section>
 
             <section id="how_to_climb">
-                <h2>How to Climb</h2>
+                <h2 id="section_title">How to Climb</h2>
+                <figure>
                 <img src="images/cel2.jpg" alt="Image of my Marvel Rivals Profile displaying only 12 hours this season as Celestial two.">
                     <figcaption> <i>My current Marvel Rivals Profile, I have only 12 hours this season with a 70% winrate on duelist.</i></figcaption>
                 </figure>
             </section>
             
             <section id="ai_prompt">
-                <h2>My AI Prompts</h2>
+                <h2 id="section_title">My AI Prompts</h2>
+                <h3>My Prompts:</h3>
+                <p>How do I hide my HTML sections so that only a section that is clicked on is displayed? I think I know about an onclick method?</p>
+                <h3>Response:</h3>
+                <figure>
+                    <img src="images/ai1.png" alt="First image of my AI Prompt to ChatGPT on hiding sections.">
+                        <figcaption> <i>First image of my AI Prompt to ChatGPT on hiding sections.</i></figcaption>
+                    </figure>
+                <figure>
+                    <img src="images/ai2.png" alt="First image of my AI Prompt to ChatGPT on hiding sections.">
+                        <figcaption> <i>Second image of my AI Prompt to ChatGPT on hiding sections.</i></figcaption>
+                    </figure>
             </section>
         </main>
 
