--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
         <Title>Hobby</Title>
         <style>
             body {
-                font-family: Arial, sans-serif;
+                font-family: "Rubik", sans-serif;
                 background-color: #EDE9F5;
                 color: #3D52A0;
                 margin: 0;
@@ -95,6 +98,17 @@
             }
 
             a:hover {
+                text-decoration: underline;
+            }
+
+            footer {
+                color: #3D52A0;
+                text-decoration: none;
+                text-align: center;
+                font-family: "Rubik", sans-serif;
+            }
+            
+            footer a:hover {
                 text-decoration: underline;
             }
         </style>
@@ -300,7 +314,7 @@
         </main>
 
         <footer>
-
+            <p class="footer">Designed by Adrian Khlim, <a href="../ajkenterprise.com">A JORDAN KHLIM ENTERPRISE© 2025</a>, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/responsive-web-design">Certified in Responsive Web Design</a></p>
         </footer>
     </body>
 </html>
