Added dividers in nav

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -125,12 +125,12 @@
         <header>
             <h1>Adrian's Favorite Competitive Games</h1>
             <nav>
-                <span><a onclick="toggleSection('home')" class="nav" href="#home">Home</a></span>
-                <span><a onclick="toggleSection('about_me')" class="nav" href="#about_me">About Me</a></span>
-                <span><a onclick="toggleSection('best_times')" class="nav" href="#best_times">Best Times</a></span>
-                <span><a onclick="toggleSection('where')" class="nav" href="#where">Where to Find Me</a></span>
+                <span><a onclick="toggleSection('home')" class="nav" href="#home">Home</a> ✦ </span>
+                <span><a onclick="toggleSection('about_me')" class="nav" href="#about_me">About Me</a> ✦</span>
+                <span><a onclick="toggleSection('best_times')" class="nav" href="#best_times">Best Times</a> ✦</span>
+                <span><a onclick="toggleSection('where')" class="nav" href="#where">Where to Find Me</a> ✦</span>
                 <span><a onclick="toggleSection('why')" class="nav" href="#why">Why Climb</a></span>
-                <span><a onclick="toggleSection('how_to_climb')" class="nav" href="#how_to_climb">How to Climb</a></span>
+                <span><a onclick="toggleSection('how_to_climb')" class="nav" href="#how_to_climb">How to Climb</a> ✦</span>
                 <span><a onclick="toggleSection('ai_prompt')" class="nav" href="#ai_prompt">AI Prompts</a></span>
             </nav>
         </header>
