Updated home links and removed gitignore in images

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 			</figure>
 			<div id="links">
 				<a href = "itis3135/"> Click to go to ITIS3135 Site</a> |   
-				<a href = "https://adriankusa.github.io/"> Github pages</a> | 
+				<a href = "https://adriankusa.github.io/"> Github Home Page</a> | 
+				<a href = "https://adriankusa.github.io/"> Github Course Page</a> | 
 				<a href="ajkenterprise.com"> A JORDAN KHLIM ENTERPRISE© 2025</a> |
 				<a href="https://www.linkedin.com/in/adriankhlim/"> LinkedIn </a>
 			</div>
