--- a/index.html
+++ b/index.html
@@ -11,29 +11,48 @@
 				text-align: center;
 				background-color: #9DACFF;
 				color: white;
+				margin: 0;
+				min-height:  100vh;
+				display: flex;
+				flex-direction: column;
 			}
 
 			header {
 				background-color: #6457A6;
 				padding: 20px;
+				min-height: 50px;
 			}
 
-			#links {
+			footer {
 				background-color: #6457A6;
-				margin: 50px 0;
 				padding: 20px;
-				
+				min-height: 50px;
+				text-align: center;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				flex: wrap;
 			}
 
-			figure {
-				margin: 50px;
+
+			main {
+  				flex: 1;
+				display: flex;
+    			align-items: center;
+    			justify-content: center;
 			}
 
 			figure img {
-				max-width: 50%;
-				max-height: auto;
+				max-width: 100%;
+				height: auto;
 				border-radius: 500px;
 			}
+
+			figcaption {
+				margin: 10px 0;
+				text-align: center;
+			}
+
 			a {
 				color: white;
 				text-decoration: none;
@@ -57,15 +76,18 @@
 				<img src="itis3135/images/LinkedInPhoto.png" alt="My profile picture from LinkedIn.">
 				<figcaption>My LinkedIn profile picture.</figcaption>
 			</figure>
-			<div id="links">
-				<a href = "itis3135/"> Click to go to ITIS3135 Site</a> |   
-				<a href = "https://adriankusa.github.io/"> Github Home Page</a> | 
-				<a href = "https://adriankusa.github.io/itis3135"> Github Course Page</a> | 
-				<a href="ajkenterprise.com"> A JORDAN KHLIM ENTERPRISE© 2025</a> |
-				<a href="https://www.linkedin.com/in/adriankhlim/"> LinkedIn </a>
-			</div>
-
+		
 		</main>
+
+		<footer>
+			
+				<a href = "itis3135/"> Click to go to ITIS3135 Site</a> &nbsp;| &nbsp;  
+				<a href = "https://adriankusa.github.io/"> Github Home Page</a> &nbsp; | &nbsp;
+				<a href = "https://adriankusa.github.io/itis3135"> Github ITIS 3135 Course Page</a> &nbsp; | &nbsp;
+				<a href="ajkenterprise.com"> A JORDAN KHLIM ENTERPRISE© 2025</a> &nbsp; | &nbsp;
+				<a href="https://www.linkedin.com/in/adriankhlim/"> LinkedIn </a>
+		
+		</footer>
 		
 	</body>
 </html>
