Started ITIS3135 Course Page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 				flex: wrap;
 			}
 
-
 			main {
   				flex: 1;
 				display: flex;
@@ -80,12 +79,13 @@
 		</main>
 
 		<footer>
-			
-				<a href = "itis3135/"> Click to go to ITIS3135 Site</a> &nbsp;| &nbsp;  
-				<a href = "https://adriankusa.github.io/"> Github Home Page</a> &nbsp; | &nbsp;
-				<a href = "https://adriankusa.github.io/itis3135"> Github ITIS 3135 Course Page</a> &nbsp; | &nbsp;
+			<nav>
+				<a href = "itis3135/"> ITIS3135 Course Site</a> &nbsp;| &nbsp;  
+				<a href = "https://adriankusa.github.io/"> GitHub Home Page</a> &nbsp; | &nbsp;
+				<a href = "https://adriankusa.github.io/itis3135"> GitHub ITIS3135 Course Page</a> &nbsp; | &nbsp;
 				<a href="ajkenterprise.com"> A JORDAN KHLIM ENTERPRISE© 2025</a> &nbsp; | &nbsp;
 				<a href="https://www.linkedin.com/in/adriankhlim/"> LinkedIn </a>
+			</nav>
 		
 		</footer>
 		
