--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,11 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ITIS 3135 Home</title>
+    <title>ITIS 3135 Course Page</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/default.css">
 </head>
 
 <body>
-    <h1> I am Adrian Khlim and this is my ITIS3135 First Course Page . </h1>
+    <header>
+        <h1> Adrian Khlim's Absolute Koala || ITIS 3135 </h1>
+
+        <nav>
+            <a href="../index.html">CLT Webpage</a> ✿
+            <a href="introduction.html">Introduction</a>
+        </nav>
+    </header>
+
+    <main>
+        <h2>ITIS 3135 Course Page</h2>
+    </main>
+
+    <footer>
+     
+        <nav class="footer">
+            <a href="../index.html">CLT Webpage</a> &nbsp;| &nbsp;  
+            <a href = "https://adriankusa.github.io/"> GitHub Home Page</a> &nbsp; | &nbsp;
+            <a href = "https://adriankusa.github.io/itis3135"> GitHub ITIS3135 Course Page</a> &nbsp; | &nbsp;
+            <a href="https://www.linkedin.com/in/adriankhlim/"> LinkedIn </a>
+        </nav>
+
+        <p class="footer">Designed by Adrian Khlim, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/responsive-web-design">Certified in Responsive Web Design</a></p>
+        <p class ="footer"><a href="../ajkenterprise.com">A JORDAN KHLIM ENTERPRISE© 2025</a></p>
+
+    </footer>
 </body>
 </html>
