--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -14,19 +14,24 @@
         <h1> Adrian Khlim's Absolute Koala || ITIS 3135 </h1>
 
         <nav>
-            <a href="../index.html">CLT Webpage</a> ✿
+            <a href="https://webpages.charlotte.edu/akhlim/">CLT Webpage</a> ✿
             <a href="introduction.html">Introduction</a>
         </nav>
     </header>
 
     <main>
         <h2>ITIS 3135 Course Page</h2>
+        <p>
+            Welcome to my ITIS 3135 course page.
+            <br>
+            Feel free to look around and explore the links!
+        </p>
     </main>
 
     <footer>
      
         <nav class="footer">
-            <a href="../index.html">CLT Webpage</a> &nbsp;| &nbsp;  
+            <a href="https://webpages.charlotte.edu/akhlim/">CLT Webpage</a> &nbsp;| &nbsp;  
             <a href = "https://adriankusa.github.io/"> GitHub Home Page</a> &nbsp; | &nbsp;
             <a href = "https://adriankusa.github.io/itis3135"> GitHub ITIS3135 Course Page</a> &nbsp; | &nbsp;
             <a href="https://www.linkedin.com/in/adriankhlim/"> LinkedIn </a>
