--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 		<footer>
 			<nav>
-				<a href = "itis3135/"> ITIS3135 Course Site</a> &nbsp;| &nbsp;  
+				<a href = "itis3135/"> ITIS3135 Course Page</a> &nbsp;| &nbsp;  
 				<a href = "https://adriankusa.github.io/"> GitHub Home Page</a> &nbsp; | &nbsp;
 				<a href = "https://adriankusa.github.io/itis3135"> GitHub ITIS3135 Course Page</a> &nbsp; | &nbsp;
 				<a href="ajkenterprise.com"> A JORDAN KHLIM ENTERPRISE© 2025</a> &nbsp; | &nbsp;
