--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Personal Webpage | UNC Charlotte</title>
+		<title>Adrian Khlim's Personal Webpage ✿ UNC Charlotte</title>
 		<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 		<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 		<style>
