--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ITIS 3135 Course Page</title>
+        <title>Adrian Khlim's Absolute Koala ✿ ITIS 3135 ✿ Contract</title>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/default.css">
         <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
