--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -13,7 +13,7 @@
     <body>
 
         <header>
-            <div data-include="components/header.html"></div>
+            <div data-include="components/header.html" data-replace="%title%:Contract"></div>
         </header>
 
         <main>
