--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -11,7 +11,7 @@
 
     <body>
         <header>
-            <div data-include="components/header.html"></div>
+            <div data-include="components/header.html" data-replace="%title%:Introduction"></div>
         </header>
 
         <main>
