--- a/itis3135/absolutekoala/about.html
+++ b/itis3135/absolutekoala/about.html
@@ -15,20 +15,29 @@
     <body>
 
         <header>
-            <div data-include="components/header.html" data-replace="%title%:Form"></div>
+            <div data-include="components/header.html"></div>
         </header>
 
         <main>
-            
+            <h2>Absolute Koala's Awesome Kendamas Home Page</h2>
+            <p>Organized in the backyards of Charlotte, North Carolina, sourcing wood locally and accross the states to produce the finest handles.</p>
+            <figure>
+                <img src="images/rainbow_logo.png">
+                <figcaption>Mugen Musou Kendama</figcaption>
+            </figure>
 
+            <figure>
+                <img src="images/hiro2.png">
+                <figcaption>Mugen Musou Hiroshima</figcaption>
+            </figure>
         </main>
 
         <footer>
-            <p class="footer">Designed by Adrian Khlim, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/responsive-web-design">Certified in Responsive Web Design</a></p>
-            <p class ="footer"><a href="../ajkenterprise.com">A JORDAN KHLIM ENTERPRISE© 2025</a></p>
+            <div data-include="components/footer.html"></div>
         </footer>
 
-        <script src="scripts/HTMLInclude.min.js"></script>
+        <script src="../scripts/HTMLInclude.min.js"></script>
+
 
     </body>
 </html>
