--- a/itis3135/absolutekoala/index.html
+++ b/itis3135/absolutekoala/index.html
@@ -15,9 +15,7 @@
     <body>
 
         <header>
-            <h4>
-                <i>Awesome Kendamas for the Absolute Koalas.</i>
-            </h4>
+            <div data-include="components/header.html"></div>
         </header>
 
         <main>
@@ -29,14 +27,19 @@
                 Providing the best Kendama's for five years, sourcing the finest woods, along with the most creative and aesthetic designs.
             </p>
 
+            <figure>
+                <img src="images/mugen_black.jpg">
+                <figcaption>Mugen Black Kendama</figcaption>
+            </figure>
+
         </main>
 
         <footer>
-            <p class="footer">Designed by Adrian Khlim, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/responsive-web-design">Certified in Responsive Web Design</a></p>
-            <p class ="footer"><a href="../ajkenterprise.com">A JORDAN KHLIM ENTERPRISE© 2025</a></p>
+            <div data-include="components/footer.html"></div>
         </footer>
 
-        
+        <script src="../scripts/HTMLInclude.min.js"></script>
+
 
     </body>
 </html>
