Update Home Footer

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 				<a href = "https://adriankusa.github.io/"> GitHub Home Page</a> &nbsp; | &nbsp;
 				<a href = "https://adriankusa.github.io/itis3135"> GitHub ITIS3135 Course Page</a> &nbsp; | &nbsp;
 				<a href="ajkenterprise.com"> A JORDAN KHLIM ENTERPRISE© 2025</a> &nbsp; | &nbsp;
-				<a href="https://www.linkedin.com/in/adriankhlim/"> LinkedIn </a>
+				<a href="https://www.linkedin.com/in/adriankhlim/"> LinkedIn </a> &nbsp;  &nbsp;
+				<p class="footer">Designed by Adrian Khlim, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/responsive-web-design">Certified in Responsive Web Design</a></p>
 			</nav>
 		
 		</footer>
