Updated CSS media queries, project overview examples

--- a/itis3135/project/project_overview.html
+++ b/itis3135/project/project_overview.html
@@ -179,11 +179,16 @@
     <section>
         <h3>Dynamic Functionality</h3>
         <ul>
-            <li><strong>Image Gallery:</strong> Used on the RadiateTPS project page to showcase visuals of dose overlays, CT scans, and UI screenshots.</li>
-            <li><strong>Expandable Q&A:</strong> On the "What is TPS?" page, FAQs will be shown using expandable sections to reduce clutter and improve readability.</li>
+            <li><strong>Image Gallery:</strong> Used on the RadiateTPS project page to showcase visuals of dose overlays, CT scans, and UI screenshots.</li> 
+            <p>Example link: <a href="https://www.w3schools.com/css/css_image_gallery.asp"> W3Schools Image Gallery</a> </p>
+            <li><strong>Expandable Q&A:</strong> On the "What is TPS?" page, FAQs will be shown using expandable sections to reduce clutter and improve readability.</li> 
+            <p>Example link: <a href="https://www.w3schools.com/howto/howto_js_accordion.asp"> W3Schools Accordian Tutorial</a> </p>
             <li><strong>Expandable Technical Sections:</strong> On the "Technical Details" page, sections describing workflows or architecture can be expanded/collapsed.</li>
+            <p>Example link: <a href="https://www.w3schools.com/howto/howto_js_accordion.asp"> W3Schools Accordian Tutorial</a> </p>
             <li><strong>Validated Contact Form:</strong> The "Contact" page will include a form that checks for empty fields, valid email format, and a required message before submission.</li>
+            <p>Example link: <a href="https://www.w3schools.com/js/js_validation.asp"> W3Schools JS Validation</a> </p>
             <li><strong>AJAX Thank You on Contact Page submission:</strong> Form should disappear and notify user (say Thank You or something like that)</li>
+            <p>Example link: <a href="https://www.formbackend.com/examples/simple-contact-form-using-ajax?utm_source=chatgpt.com"> Form Backend AJAX Form Submission Example</a> </p>
         </ul>
 
     </section>
