--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <h2>ITIS 3135 Course Page</h2>
+        <h2 class="course-heading">ITIS 3135 Course Page</h2>
         <p>
             Welcome to my ITIS 3135 course page.
             <br>
