--- a/itis3135/project/technical-details.html
+++ b/itis3135/project/technical-details.html
@@ -8,15 +8,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="images/radiatetps-high-resolution-logo.png">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="what-is-tps.html">What is TPS?</a></li>
-                <li><a href="radiatetps-project.html">My TPS Project</a></li>
-                <li><a href="technical-details.html">Technical Details</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <div data-include="components/header.html"></div>
         </nav>
     </header>
 
@@ -59,5 +51,8 @@
     <footer>
         <p>Created by Adrian Khlim | UNC Charlotte | Last updated April 2025</p>
     </footer>
+
+    <script src="/itis3135/project/scripts/HTMLInclude.min.js"></script>
+
 </body>
 </html>
