--- a/itis3135/project/radiatetps-project.html
+++ b/itis3135/project/radiatetps-project.html
@@ -5,19 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My TPS Project - RadiateTPS</title>
     <link rel="stylesheet" href="/itis3135/project/styles/default.css">
+    <style>
+        .carousel {
+            max-width: 800px;
+            margin: 0 auto;
+            position: relative;
+            text-align: center;
+        }
+
+        .carousel img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .carousel-buttons {
+            position: absolute;
+            top: 50%;
+            left: 0;
+            right: 0;
+            display: flex;
+            justify-content: space-between;
+            transform: translateY(-50%);
+            padding: 0 10px;
+        }
+
+        .carousel-buttons button {
+            background-color: #362a84;
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .carousel-buttons button:hover {
+            background-color: #2a206d;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <img id="logo" src="images/radiatetps-high-resolution-logo.png">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="what-is-tps.html">What is TPS?</a></li>
-                <li><a href="radiatetps-project.html">My TPS Project</a></li>
-                <li><a href="technical-details.html">Technical Details</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div data-include="components/header.html"></div>
     </header>
 
     <main>
@@ -40,10 +71,12 @@
         <section>
             <h3>Project Gallery</h3>
             <p>Below are a few screenshots and mockups of RadiateTPS in development:</p>
-            <div class="gallery">
-                <img src="images/demo_ct.png" alt="CT Viewer Mockup">
-                <img src="images/demo_roi.png" alt="ROI Highlight Mockup">
-                <img src="images/demo_dvh.png" alt="Dose Volume Histogram">
+            <div class="carousel">
+                <img id="gallery-img" src="images/demo_ct.png" alt="CT Viewer Mockup">
+                <div class="carousel-buttons">
+                    <button onclick="prevImage()">&#8592;</button>
+                    <button onclick="nextImage()">&#8594;</button>
+                </div>
             </div>
         </section>
     </main>
@@ -51,5 +84,31 @@
     <footer>
         <p>Created by Adrian Khlim | UNC Charlotte | Last updated April 2025</p>
     </footer>
+
+    <script>
+        const images = [
+            'images/demo_ct.png',
+            'images/demo_roi.png',
+            'images/demo_dvh.png'
+        ];
+
+        let currentIndex = 0;
+        const galleryImg = document.getElementById('gallery-img');
+
+        function showImage(index) {
+            galleryImg.src = images[index];
+        }
+
+        function prevImage() {
+            currentIndex = (currentIndex - 1 + images.length) % images.length;
+            showImage(currentIndex);
+        }
+
+        function nextImage() {
+            currentIndex = (currentIndex + 1) % images.length;
+            showImage(currentIndex);
+        }
+    </script>
+    <script src="/itis3135/project/scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
